| Summary: | ASTERISK-29266: ICE Role conflict with an unauthorized session | ||
| Reporter: | Salah Ahmed (rubel) | Labels: | |
| Date Opened: | 2021-01-27 13:16:55.000-0600 | Date Closed: | 2021-03-03 09:54:03.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.10.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) full.log | |
| Description: | Hello,
Recently we have experienced an issue related to ICE. We did some analysis on the issue, let me explain the scenario, Suppose, if in a call the asterisk's initial ICE role is Controlling and if in the conversation asterisk get an offer(re-Invite), then Asterisk create a new session with ICE Controlled role. After then, If remote agent sending any STUN binding request with old attrb and Controlled role, then asterisk switch its current role to Controlling mode. And this create "ice role conflict" problem for all following STUN binding requests from that agent, eventually call get disconnected from remote side. We got a solution for this, if we reset the local ICE attributes (ufrag and pass) then if the remote agent sending any Bind request with old attrb then this req get rejected with 401 (Unauthorized). This makes remote agent happy. Thank You, Salah | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-01-27 13:16:56.619-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: George Joseph (gjoseph) 2021-01-27 13:23:40.637-0600 You might want to bring this up on the asterisk-users list (http://lists.digium.com/mailman/listinfo/asterisk-users) or on the community forums at https://community.asterisk.org/. I'm not sure this is a bug. By: Salah Ahmed (rubel) 2021-01-27 13:39:54.998-0600 Hello George, Sure I will bring this up in the Asterisk-Users mailing list. Initially we tried to find any configs to fix it up. but didn't found anything helpful. Maybe there have some config variable to control it. If you know anything please share with us. Thanks, Salah By: Salah Ahmed (rubel) 2021-01-27 15:57:07.440-0600 Attached the full log By: Friendly Automation (friendly-automation) 2021-03-03 09:54:05.038-0600 Change 15533 merged by Joshua Colp: res_rtp_asterisk: Check remote ICE reset and reset local ice attrb [https://gerrit.asterisk.org/c/asterisk/+/15533|https://gerrit.asterisk.org/c/asterisk/+/15533] By: Friendly Automation (friendly-automation) 2021-03-03 09:54:09.574-0600 Change 15532 merged by Joshua Colp: res_rtp_asterisk: Check remote ICE reset and reset local ice attrb [https://gerrit.asterisk.org/c/asterisk/+/15532|https://gerrit.asterisk.org/c/asterisk/+/15532] By: Friendly Automation (friendly-automation) 2021-03-03 09:54:27.259-0600 Change 15385 merged by Joshua Colp: res_rtp_asterisk: Check remote ICE reset and reset local ice attrb [https://gerrit.asterisk.org/c/asterisk/+/15385|https://gerrit.asterisk.org/c/asterisk/+/15385] | ||